overflow x fixed

--- a/SCSS/responsive.scss
+++ b/SCSS/responsive.scss
@@ -11,9 +11,9 @@
 			margin-top: 100px;
 		}
 	}
-
+	// SIDEBAR
 	.sidebar {
-		width: 100vw;
+		width: 100%;
 		height: 77px;
 		padding: 15px 4%;
 		top: 0;
@@ -71,7 +71,7 @@
 			height: 100dvh;
 		}
 	}
-
+	// tO DO APP
 	main .todo .container-wrapper {
 		padding: 30px;
 		width: 500px;
