--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -14,6 +14,7 @@ body {
 	display: grid;
 	grid-template-columns: auto 1fr;
 	background-color: $backgroundColor;
+	overflow-x: hidden;
 }
 
 .flex {
